# Padavan-3.4-KVR

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml  toolchain.yml
toolchain/: Makefile
toolchain-mipsel/: .gitignore  dl_toolchain.sh
toolchain-mipsel/samples/mipsel-linux-uclibc/: crosstool.config
toolchain/configs/mipsel-linux-musl/: crosstool.config
toolchain/configs/mipsel-linux-musl-gcc10/: crosstool.config
toolchain/configs/mipsel-linux-musl-gcc13/: crosstool.config
toolchain/configs/mipsel-linux-musl-gcc7/: crosstool.config
toolchain/configs/mipsel-linux-musl-gcc8/: crosstool.config
toolchain/configs/mipsel-linux-musl-gcc9/: crosstool.config
toolchain/configs/mipsel-linux-uclibc/: crosstool.config
toolchain/configs/mipsel-linux-uclibc-gcc10/: crosstool.config
toolchain/configs/mipsel-linux-uclibc-gcc13/: crosstool.config
toolchain/configs/mipsel-linux-uclibc-gcc7/: crosstool.config
toolchain/configs/mipsel-linux-uclibc-gcc8/: crosstool.config  reported.by
toolchain/configs/mipsel-linux-uclibc-gcc9/: crosstool.config
trunk/: .gitignore  Makefile  build_firmware_ci  build_firmware_modify  clear_tree  clear_tree_simple  configure  coustom  versions.inc
trunk/configs/boards/: busybox_1.34.1.config  busybox_1.35.0.config  uclibc-mipsel.config
trunk/configs/templates/: 360P2.config  5K-W20.config  A3004NS.config  B70.config  BELL-A-040W-Q.config  CR660x.config  D12G.config  DIR-878.config  DIR-882.config  DSBox-DSR1.config  E8820V2.config  EA7500.config  EW1800GX.config  G7.config  GHL.config  HC5661A.config  HC5761A.config  HC5861.config  HC5861B.config  JCG-836PRO.config  JCG-AC836M.config  JCG-AC856M.config  JCG-AC860M.config  JCG-AC876M.config  JCG-Q20-breed.config  JCG-Q20-pb.config  JCG-Q20-uboot.config  JCG-Y2.config  JDC-1.config  K2P-512.config  K2P-USB.config  K2P.config  K2P_nano.config  MAC2600R.config  MI-3.config  MI-3A.config  MI-3C.config  MI-3MI.config  MI-4.config  MI-4A-100M.config  (+43 more)
trunk/libc/: Makefile
trunk/libs/: Makefile
trunk/libs/c-ares/: Makefile
trunk/libs/libcares/: Makefile
trunk/libs/libconfuse/: Makefile
trunk/libs/libcurl/: .gitignore  Makefile  curl-8.10.1.tar.xz  curl-8.9.0.tar.xz
trunk/libs/libev/: Makefile
trunk/libs/libevent/: 0002-Makefile.am-omit-building-sample-and-test.patch  Makefile
trunk/libs/libexif/: Makefile
trunk/libs/libflac/: Makefile  flac-orig.patch
trunk/libs/libiconv/: Makefile
trunk/libs/libid3tag/: Makefile
trunk/libs/libid3tag/libid3tag-0.15.2b/: CMakeLists.txt  id3tag.h
trunk/libs/libjpeg/: Makefile
trunk/libs/libjson-c/: Makefile  json-c-0.17.patch
trunk/libs/libmnl/: Makefile  libmnl-disable_examples.patch
trunk/libs/libncurses/: .gitignore  Makefile  ncurses-6.4.patch  ncurses-6.5.patch
trunk/libs/libogg/: Makefile
trunk/libs/libpcap/: Makefile
trunk/libs/libpcre/: Makefile
trunk/libs/librtlsdr/: Makefile
trunk/libs/libsodium/: Makefile  libsodium-1.0.19.tar.xz
trunk/libs/libsqlite/: Makefile
trunk/libs/libssl/: .gitignore  Makefile
trunk/libs/libtirpc/: Makefile  libtirpc-1.3.5.tar.bz2
trunk/libs/libudns/: Makefile
trunk/libs/libusb/: Makefile
trunk/libs/libusb-1.0/: Makefile  specifig.patch
trunk/libs/libuv/: Makefile
trunk/libs/libvorbis/: Makefile  disable-doc-test.patch
trunk/libs/libwebsockets/: Makefile  libwebsockets-4.3.3.patch
trunk/libs/libxml2/: Makefile
trunk/libs/libz/: Makefile
trunk/libs/mbedtls/: Makefile
trunk/libs/readline/: Makefile  readline-8.3-alpha.patch
trunk/linux-3.4.x/: Makefile
trunk/linux-3.4.x/kernel/: Makefile
trunk/linux-3.4.x/net/: Makefile
trunk/tools/: Makefile  build-headers.sh  depmod.sh
trunk/tools/lzma/: Makefile
trunk/tools/mksquashfs_xz/: Makefile  xz-5.2.10.tar.xz  xz-5.4.3.tar.xz  xz-5.4.5.tar.xz
trunk/user/: .gitignore  Makefile
trunk/user/3proxy/: Makefile
trunk/user/LPRng/: CHANGES  COPYRIGHT  ChangeLog  INSTALL  KERBEROS_configuration  Makefile  Makefile.am  Makefile.in  NEWS  README  README.SSL.SECURITY  STANDARD_configuration  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
trunk/user/LPRng/UTILS/: Makefile.am  Makefile.in  VeryFlexibleChooser.pl  atalkprint  extract_pjl  freefs.c  make_lpd_conf.in  ncpprint  ps.draft  smbprint
trunk/user/LPRng/conf/: Makefile.am  Makefile.in  init.debian  init.freebsd  init.generic  init.linux  init.linuxsb  init.redhat  init.solaris  lpd.perms.in  printcap
trunk/user/LPRng/man/: Makefile.am  Makefile.in  cancel.n  checkpc.n  lp.n  lpbanner.n  lpc.n  lpd.conf.n  lpd.n  lpd.perms.n  lpf.n  lpq.n  lpr.n  lprm.n  lprng_certs.n  lprng_index_certs.n  lpstat.n  monitor.n  printcap.n  psbanner.n
trunk/user/LPRng/po/: LPRng.pot  Makefile.am  Makefile.in  de.gmo  de.po  fr.gmo  fr.po  pl.gmo  pl.po  vi.gmo  vi.po
trunk/user/LPRng/src/: Makefile  Makefile.am  Makefile.in  lprng_certs.sh  vars.c
trunk/user/LPRng/src/AUTHENTICATE/: sclient.c  sserver.c
trunk/user/LPRng/src/auth/: krb5_auth.c  md5_auth.c  ssl_auth.c  test_auth.c
trunk/user/LPRng/src/common/: accounting.c  checkpc.c  child.c  controlword.c  copyright.c  debug.c  errormsg.c  fileopen.c  gethostinfo.c  getopt.c  getprinter.c  getqueue.c  globmatch.c  initialize.c  linelist.c  linksupport.c  lockfile.c  lpbanner.c  lpc.c  lpd.c  lpd_control.c  lpd_dispatch.c  lpd_jobs.c  lpd_logger.c  lpd_rcvjob.c  lpd_remove.c  lpd_secure.c  lpd_status.c  lpd_worker.c  lpf.c  lpq.c  lpr.c  lprm.c  lpstat.c  md5.c  merge.c  monitor.c  openprinter.c  permission.c  plp_snprintf.c  (+10 more)
trunk/user/LPRng/src/include/: accounting.h  checkpc.h  child.h  control.h  debug.h  errorcodes.h  errormsg.h  fileopen.h  gethostinfo.h  getopt.h  getprinter.h  getqueue.h  globmatch.h  initialize.h  krb5_auth.h  linelist.h  linksupport.h  lockfile.h  lp.h  lpc.h  lpd.h  lpd_control.h  lpd_dispatch.h  lpd_jobs.h  lpd_logger.h  lpd_rcvjob.h  lpd_remove.h  lpd_secure.h  lpd_status.h  lpd_worker.h  lpq.h  lpr.h  lprm.h  lpstat.h  md5.h  merge.h  openprinter.h  permission.h  plp_snprintf.h  portable.h  (+12 more)
trunk/user/accel-pptpd/: Makefile  (+1 more)
(+448 files in other folders)
